--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 ##O Ideal seria colocar a API Key em um Secret Manager
 API_KEY='x7x1/ROfdQInbFu1j60j7g==qDJQLrZgbMHe5Azr'
+API_NINJAS_V1='https://api.api-ninjas.com/v1'
